all other functionalities

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.action-selected, .action-selected:hover, .action-selected:focus{
+  background: #F2C063 !important;
+  color : #fff !important;
+}
+.back-button{
+  float:left
+}
